--- a/quantum_energy/config.ini
+++ b/quantum_energy/config.ini
@@ -1,9 +1,11 @@
-[ARGUMENTS]
+[PARAMS]
 x0 = 2
 a = 3
 b = 1
-lr = 0.5
+
+[CONFIGURATION]
+lr = 1.0
 max_iter = 10000
-plot = True
+plot = False
 function = func1
 num_particles = 1
