Added interactive plot mode. Changed formatting of output.

--- a/quantum_energy/config.ini
+++ b/quantum_energy/config.ini
@@ -1,11 +1,12 @@
 [PARAMS]
 x0 = 2
 a = 3
-b = 1
+#b = 1
 
 [CONFIGURATION]
-lr = 0.2
+lr = 0.5
 max_iter = 30000
-plot = False
+plot = True
 function = func1
 num_particles = 1
+interactive = True
