Added L,N and w0 as inputs to CLI and config.ini

--- a/quantum_energy/config.ini
+++ b/quantum_energy/config.ini
@@ -1,11 +1,25 @@
 [PARAMS]
+# One particle and two particle parameters
 x0 = 2
 a = 1
+# Optional parameter for one particle
 #b = 1
 
-[CONFIGURATION]
+[TWO-PARTICLE]
+# Vekselvirkning --> Hva kaller vi denne?
+w0 = 0
+
+[NUMERICS]
+# Lenght of interval
+L = 20
+# Number of subintervals
+N = 500
+# Learning rate for gradient descent algorithm
 lr = 0.5
+# Maximum number of iterations in gradient descent
 max_iter = 200
+
+[CONFIGURATION]
 plot = True
 function = func1
 num_particles = 2
