Removed bug in gather_params_in_list()

--- a/quantum_energy/config.ini
+++ b/quantum_energy/config.ini
@@ -6,7 +6,7 @@ a = 1
 #b = 1
 
 [TWO-PARTICLE]
-# Vekselvirkning --> Hva kaller vi denne?
+# Interaction term for two-particle system
 w0 = 0
 
 [NUMERICS]
