fixed legend for surface plot two particle added some latex expressions

--- a/quantum_energy/config.ini
+++ b/quantum_energy/config.ini
@@ -1,13 +1,13 @@
 [PARAMS]
 # One particle and two particle parameters
-x0 = 2
+x0 = 1
 a = 1
 # Optional parameter for one particle
 #b = 1
 
 [TWO-PARTICLE]
 # Interaction term for two-particle system
-w0 = 0
+w0 = 1
 
 [NUMERICS]
 # Lenght of interval
@@ -17,10 +17,10 @@ N = 500
 # Learning rate for gradient descent algorithm
 lr = 0.5
 # Maximum number of iterations in gradient descent
-max_iter = 200
+max_iter = 50
 
 [CONFIGURATION]
 plot = True
 function = func1
 num_particles = 2
-interactive = True
+interactive = False
