random colors for gradient path

--- a/quantum_energy/config.ini
+++ b/quantum_energy/config.ini
@@ -1,7 +1,7 @@
 [PARAMS]
 # One particle and two particle parameters
-x0 = 1
-a = 1
+x0 = 3
+a = 4
 # Optional parameter for one particle
 #b = 1
 
@@ -17,10 +17,10 @@ N = 500
 # Learning rate for gradient descent algorithm
 lr = 0.5
 # Maximum number of iterations in gradient descent
-max_iter = 50
+max_iter = 15000
 
 [CONFIGURATION]
 plot = True
 function = func1
-num_particles = 2
-interactive = False
+num_particles = 1
+interactive = True
